--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-  
 
+<!-- o botao da compra nao esta funcionando! -->
     <header>
         <!-- mudando a cor do menu-->
         <nav class="nav navbar-inverse">
@@ -37,6 +37,7 @@
                             <li> <a href="#">Masculina</a> </li>
                             <li> <a href="#">Feminina</a> </li>
                             <li> <a href="#">Infantil</a> </li>
+
 
                         </ul>
                     </li>
