--- a/camisetas.html
+++ b/camisetas.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Here's a page for all of your shirts!</h1>
   <h2>adding a new bullshit</h2>
+  <h3>Learning git is kind of difficult!</h3>
 </body>
 </html>
