--- a/camisetas.html
+++ b/camisetas.html
@@ -10,5 +10,6 @@
   <h1>Here's a page for all of your shirts!</h1>
   <h2>adding a new bullshit</h2>
   <h3>Learning git is kind of difficult!</h3>
+  <p>Learing git commands isn't as hard as I thought it could be, you just have to get used to it</p>
 </body>
 </html>
